manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gettaskservice
  namespace: gagan
spec:
  type: ClusterIP
  selector:
    app: get-task
  ports:
  - port: 80
    targetPort: 8000
